Fix toggle button alignment

--- a/src/assets/stylesheets/room-settings-dialog.scss
+++ b/src/assets/stylesheets/room-settings-dialog.scss
@@ -17,7 +17,7 @@
   margin-left: 20px;
 
   & > * {
-    margin-bottom: 12px;
+    margin-top: 12px;
   }
 
   &:last-child {
